[metadata]
name = axiom
description = An in-process object-relational database
long_description = file:README.rst
license_file = LICENSE
url = https://github.com/twisted/axiom
classifiers =
        Development Status :: 5 - Production/Stable
        Framework :: Twisted
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 2 :: Only
        Topic :: Database

[options]
packages =
        axiom
        axiom.plugins
        axiom.scripts
        axiom.test
        axiom.test.historic
        axiom.test.upgrade_fixtures
        twisted.plugins
python_requires = >= 2.7, < 3
setup_requires =
        setuptools_scm >= 3.4
install_requires =
        argon2_cffi
        epsilon >= 0.7.0
        twisted[tls] >= 13.2.0
        txpasslib
scripts =
        bin/axiomatic
include_package_data = True

[options.extras_require]
test =
        hypothesis[datetime] >= 2.0.0, < 3.0.0
